<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Général -->
    <string name="app_name">W3S-Tickets</string>
    <string name="TitleLogin">Login</string>
    <string name="CategorieDropdownlist">Select a category</string>
    <string name="Login_please_fill_message">Please fill out the following form with your login credentials:</string>
    <string name="footer_copyright">Copyright Ticket System © v0.2.0 2014 by Web3Sys.\nAll Rights Reserved.</string>
    <string name="fields_marked_message">Fields marked with a * are required</string>

    <!-- Vue connexion -->
    <string name="TitleLogin">Login</string>
    <string name="errorInvalidCredentialsMessage">You entered the wrong email and/or password, please try again.</string>
    <string name="Login_please_fill_message">Please fill out the following form with your login credentials:</string>
    <string name="Login">Login</string>
    <string name="Exit">Exit</string>

    <!-- Vue création de ticket -->
    <string name="errorCategoryRequired">Please select a category</string>
    <string name="errorSubCategoryRequired">Please select a sub-category</string>
    <string name="errorBuildingRequired">Please select a building</string>
    <string name="CategorieDropdownlist">Select a category</string>
    <string name="create_ticket_title">Create a new ticket</string>
    <string name="select_category_text">Select a category *</string>
    <string name="selectSubCategoryMsg">Select a sub-category *</string>
    <string name="selectBuildingMsg">Select a building *</string>
    <string name="inputEtage">Floor number</string>
    <string name="inputOfficeNumber">Office number</string>
    <string name="inputDescription">Description</string>
    <string name="resetTicketView_label">Reset</string>
    <string name="createTicket_label">Create the ticket</string>
    <string name="errorAreaTestMessage">This is an error test message. This is an error test message. This is an error
        test message. This is an error test message. This is an error test message.
    </string>
    <string name="dashboard_title">Dashboard</string>
    <string name="errorInvalidCredentialsMessage">You entered the wrong email and/or password, please try again.
    </string>
    <string name="errorCategoryRequired">Please select a category</string>
    <string name="errorSubCategoryRequired">Please select a sub-category</string>
    <string name="errorBuildingRequired">Please select a building</string>
    <string name="dashboard_graphTypeSelectionPrompt">Please select a type of graph :</string>
    <string name="dashboard_building_filter_prompt">Please select a building</string>

    <!-- Vue résumé ticket -->
    <string name="summary_title">Ticket summary</string>
    <string name="summary_ticket_number">Ticket\'s number</string>
    <string name="summary_user_name">User name</string>
    <string name="summary_category_name">Category</string>
    <string name="summary_subCategory_name">Sub-category</string>
    <string name="summary_building_name">Building name</string>
    <string name="summary_assigned_to">Assigned to</string>
    <string name="summary_way_of_creation">Way of creation</string>
    <string name="summary_a_mail_has_been_sent">A mail has been sent to</string>
    <string name="summary_finish_creation">Back to ticket creation menu</string>
    <string name="summary_button_exit">Exit</string>
    <string name="common_exit">Exit</string>
    <string name="dashboard_graphType_ticketsForCategory"># tickets by category</string>
    <string name="dashboard_graphType_ticketsForStatus"># tickets by status</string>
    <string name="dashboard_graphType_TicketsByCompanies"># tickets by company</string>
    <string name="common_cancel">Cancel</string>
</resources>
