<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg"
                android:padding="20dp"
        >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dashboard_title"
        android:textSize="48dp"
        android:textStyle="italic|bold"
        android:textColor="@color/title_text_color"
        android:id="@+id/textView" android:layout_marginBottom="10dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:weightSum="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnersLayout">
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/graphTypeSpinner" android:layout_marginBottom="10dp"
                    android:prompt="@string/dashboard_graphTypeSelectionPrompt"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/buildingFilterSpinner" android:layout_marginBottom="10dp"
                    android:prompt="@string/dashboard_building_filter_prompt"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="250dp" android:id="@+id/graphLayout" android:layout_marginBottom="10dp"
                android:layout_weight="5.53">
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:id="@+id/buttonsLayout">
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/common_exit"
                    android:id="@+id/dashboard_exitButton" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Layout du graphique à afficher -->

    <!-- Layout des boutons -->

    <!-- Layout du spinner de sélection du type de graphique & filtre par building -->

</LinearLayout>