<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="16dp" android:background="@drawable/gradient_bg">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Ticket creation summary"
            android:id="@+id/textView"
            android:textColor="@color/title_text_color" android:textStyle="bold|italic" android:textSize="32dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true" android:id="@+id/linearLayout3"
            android:layout_above="@+id/linearLayout2">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/summary_a_mail_has_been_sent"
                android:id="@+id/mail_sent_textview"
                android:textStyle="italic"
                android:textColor="@color/mail_sent_color"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginTop="77dp" android:layout_below="@+id/textView"
            android:layout_marginBottom="104dp" android:layout_alignParentBottom="true">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_ticket_number"
                    android:id="@+id/textView2" android:gravity="center_vertical|left" android:layout_weight=".5"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/summary_numTicket" android:gravity="center_vertical|right" android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_category_name"
                    android:id="@+id/textView2" android:gravity="center_vertical|left" android:layout_weight=".5"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/summary_category" android:gravity="center_vertical|right"
                    android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_subCategory_name"
                    android:id="@+id/textView2" android:gravity="center_vertical|left" android:layout_weight=".5"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/summary_subCategory" android:gravity="center_vertical|right" android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_building_name"
                    android:id="@+id/textView2" android:gravity="center_vertical|left" android:layout_weight=".7"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/summary_buildingName" android:gravity="center_vertical|right" android:layout_weight=".3"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
                  android:id="@+id/linearLayout2" android:layout_marginTop="266dp"
                  android:layout_alignTop="@+id/linearLayout">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_finish_creation"
                android:id="@+id/buttonBackToCreation"
                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_button_exit"
                android:id="@+id/summary_exitButton"
                />
    </LinearLayout>
</RelativeLayout>